# I-Feel-Analysis

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
data/NRC-Emotion-Lexicon/: README.txt
notebooks/: i-feel-analysis.ipynb
