[project]
name = "i-feel-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emotionextractor>=0.0.3",
    "kagglehub>=0.3.13",
    "nbformat>=5.10.4",
    "nrclex>=3.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
